pa2/code/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list_with_empty '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list_with_empty '}' ';'
    6      | error ';'

    7 feature_list_with_empty: /* empty */
    8                        | feature_list

    9 feature_list: feature
   10             | feature_list feature

   11 feature: OBJECTID '(' formal_list_with_empty ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expression ';'
   14        | error ';'

   15 formal_list_with_empty: /* empty */
   16                       | formal_list

   17 formal_list: formal
   18            | formal_list ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expression_list_with_empty: /* empty */
   21                           | expression_list

   22 expression_list: expression
   23                | expression_list ',' expression

   24 expression_list_not_empty: expression ';'
   25                          | expression_list_not_empty expression ';'
   26                          | error ';'

   27 let_: OBJECTID ':' TYPEID IN expression
   28     | OBJECTID ':' TYPEID ASSIGN expression IN expression
   29     | OBJECTID ':' TYPEID ',' let_
   30     | OBJECTID ':' TYPEID ASSIGN expression ',' let_
   31     | error ',' let_

   32 case_list: case_
   33          | case_list case_

   34 case_: OBJECTID ':' TYPEID DARROW expression ';'

   35 expression: OBJECTID ASSIGN expression
   36           | expression '.' OBJECTID '(' expression_list_with_empty ')'
   37           | expression '@' TYPEID '.' OBJECTID '(' expression_list_with_empty ')'
   38           | OBJECTID '(' expression_list_with_empty ')'
   39           | IF expression THEN expression ELSE expression FI
   40           | WHILE expression LOOP expression POOL
   41           | '{' expression_list_not_empty '}'
   42           | LET let_
   43           | CASE expression OF case_list ESAC
   44           | NEW TYPEID
   45           | ISVOID expression
   46           | expression '+' expression
   47           | expression '-' expression
   48           | expression '*' expression
   49           | expression '/' expression
   50           | '~' expression
   51           | expression '<' expression
   52           | expression LE expression
   53           | expression '=' expression
   54           | NOT expression
   55           | '(' expression ')'
   56           | OBJECTID
   57           | INT_CONST
   58           | STR_CONST
   59           | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 36 37 38 55
')' (41) 11 36 37 38 55
'*' (42) 48
'+' (43) 46
',' (44) 18 23 29 30 31
'-' (45) 47
'.' (46) 36 37
'/' (47) 49
':' (58) 11 12 13 19 27 28 29 30 34
';' (59) 4 5 6 11 12 13 14 24 25 26 34
'<' (60) 51
'=' (61) 53
'@' (64) 37
'{' (123) 4 5 11 41
'}' (125) 4 5 11 41
'~' (126) 50
error (256) 6 14 26 31
CLASS (258) 4 5
ELSE (259) 39
FI (260) 39
IF (261) 39
IN (262) 27 28
INHERITS (263) 5
LET (264) 42
LOOP (265) 40
POOL (266) 40
THEN (267) 39
WHILE (268) 40
CASE (269) 43
ESAC (270) 43
OF (271) 43
DARROW (272) 34
NEW (273) 44
ISVOID (274) 45
STR_CONST (275) 58
INT_CONST (276) 57
BOOL_CONST (277) 59
TYPEID (278) 4 5 11 12 13 19 27 28 29 30 34 37 44
OBJECTID (279) 11 12 13 19 27 28 29 30 34 35 36 37 38 56
ASSIGN (280) 13 28 30 35
NOT (281) 54
LE (282) 52
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list_with_empty (49)
    on left: 7 8, on right: 4 5
feature_list (50)
    on left: 9 10, on right: 8 10
feature (51)
    on left: 11 12 13 14, on right: 9 10
formal_list_with_empty (52)
    on left: 15 16, on right: 11
formal_list (53)
    on left: 17 18, on right: 16 18
formal (54)
    on left: 19, on right: 17 18
expression_list_with_empty (55)
    on left: 20 21, on right: 36 37 38
expression_list (56)
    on left: 22 23, on right: 21 23
expression_list_not_empty (57)
    on left: 24 25 26, on right: 25 41
let_ (58)
    on left: 27 28 29 30 31, on right: 29 30 31 42
case_list (59)
    on left: 32 33, on right: 33 43
case_ (60)
    on left: 34, on right: 32 33
expression (61)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59, on right: 11 13 22 23 24 25 27 28 30 34 35
    36 37 39 40 43 45 46 47 48 49 50 51 52 53 54 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list_with_empty '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list_with_empty '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list_with_empty '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list_with_empty '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list_with_empty '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list_with_empty '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list_with_empty)

    feature_list_with_empty  go to state 15
    feature_list             go to state 16
    feature                  go to state 17


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list_with_empty '}' ';'

    '{'  shift, and go to state 18


State 13

   14 feature: error . ';'

    ';'  shift, and go to state 19


State 14

   11 feature: OBJECTID . '(' formal_list_with_empty ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 15

    4 class: CLASS TYPEID '{' feature_list_with_empty . '}' ';'

    '}'  shift, and go to state 22


State 16

    8 feature_list_with_empty: feature_list .
   10 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 8 (feature_list_with_empty)

    feature  go to state 23


State 17

    9 feature_list: feature .

    $default  reduce using rule 9 (feature_list)


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list_with_empty '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list_with_empty)

    feature_list_with_empty  go to state 24
    feature_list             go to state 16
    feature                  go to state 17


State 19

   14 feature: error ';' .

    $default  reduce using rule 14 (feature)


State 20

   11 feature: OBJECTID '(' . formal_list_with_empty ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 15 (formal_list_with_empty)

    formal_list_with_empty  go to state 26
    formal_list             go to state 27
    formal                  go to state 28


State 21

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 29


State 22

    4 class: CLASS TYPEID '{' feature_list_with_empty '}' . ';'

    ';'  shift, and go to state 30


State 23

   10 feature_list: feature_list feature .

    $default  reduce using rule 10 (feature_list)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_with_empty . '}' ';'

    '}'  shift, and go to state 31


State 25

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 26

   11 feature: OBJECTID '(' formal_list_with_empty . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 33


State 27

   16 formal_list_with_empty: formal_list .
   18 formal_list: formal_list . ',' formal

    ','  shift, and go to state 34

    $default  reduce using rule 16 (formal_list_with_empty)


State 28

   17 formal_list: formal .

    $default  reduce using rule 17 (formal_list)


State 29

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 30

    4 class: CLASS TYPEID '{' feature_list_with_empty '}' ';' .

    $default  reduce using rule 4 (class)


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_with_empty '}' . ';'

    ';'  shift, and go to state 37


State 32

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

   11 feature: OBJECTID '(' formal_list_with_empty ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 39


State 34

   18 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 40


State 35

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 55


State 36

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_with_empty '}' ';' .

    $default  reduce using rule 5 (class)


State 38

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 39

   11 feature: OBJECTID '(' formal_list_with_empty ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 56


State 40

   18 formal_list: formal_list ',' formal .

    $default  reduce using rule 18 (formal_list)


State 41

   39 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 57


State 42

   42 expression: LET . let_

    error     shift, and go to state 58
    OBJECTID  shift, and go to state 59

    let_  go to state 60


State 43

   40 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 61


State 44

   43 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 62


State 45

   44 expression: NEW . TYPEID

    TYPEID  shift, and go to state 63


State 46

   45 expression: ISVOID . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 64


State 47

   58 expression: STR_CONST .

    $default  reduce using rule 58 (expression)


State 48

   57 expression: INT_CONST .

    $default  reduce using rule 57 (expression)


State 49

   59 expression: BOOL_CONST .

    $default  reduce using rule 59 (expression)


State 50

   35 expression: OBJECTID . ASSIGN expression
   38           | OBJECTID . '(' expression_list_with_empty ')'
   56           | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 56 (expression)


State 51

   54 expression: NOT . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 67


State 52

   50 expression: '~' . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 68


State 53

   41 expression: '{' . expression_list_not_empty '}'

    error       shift, and go to state 69
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression_list_not_empty  go to state 70
    expression                 go to state 71


State 54

   55 expression: '(' . expression ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 72


State 55

   13 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   36 expression: expression . '.' OBJECTID '(' expression_list_with_empty ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_with_empty ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 82


State 56

   11 feature: OBJECTID '(' formal_list_with_empty ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 83


State 57

   36 expression: expression . '.' OBJECTID '(' expression_list_with_empty ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_with_empty ')'
   39           | IF expression . THEN expression ELSE expression FI
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    THEN  shift, and go to state 84
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 58

   31 let_: error . ',' let_

    ','  shift, and go to state 85


State 59

   27 let_: OBJECTID . ':' TYPEID IN expression
   28     | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   29     | OBJECTID . ':' TYPEID ',' let_
   30     | OBJECTID . ':' TYPEID ASSIGN expression ',' let_

    ':'  shift, and go to state 86


State 60

   42 expression: LET let_ .

    $default  reduce using rule 42 (expression)


State 61

   36 expression: expression . '.' OBJECTID '(' expression_list_with_empty ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_with_empty ')'
   40           | WHILE expression . LOOP expression POOL
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LOOP  shift, and go to state 87
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 62

   36 expression: expression . '.' OBJECTID '(' expression_list_with_empty ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_with_empty ')'
   43           | CASE expression . OF case_list ESAC
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    OF   shift, and go to state 88
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 63

   44 expression: NEW TYPEID .

    $default  reduce using rule 44 (expression)


State 64

   36 expression: expression . '.' OBJECTID '(' expression_list_with_empty ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_with_empty ')'
   45           | ISVOID expression .
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 45 (expression)


State 65

   35 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 89


State 66

   38 expression: OBJECTID '(' . expression_list_with_empty ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    $default  reduce using rule 20 (expression_list_with_empty)

    expression_list_with_empty  go to state 90
    expression_list             go to state 91
    expression                  go to state 92


State 67
